# fastapi_docker

./: README.md
.github/workflows/: main.yaml
project/: Dockerfile  Dockerfile.prod  entrypoint.sh  pyproject.toml
project/app/api/: summaries.py
project/tests/: test_ping.py  test_summaries.py
