[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_docker"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
asyncpg = "^0.26.0"
tortoise-orm = "^0.19.2"
aerich = "^0.6.3"
pytest = "^7.1.3"
requests = "^2.28.1"
gunicorn = "^20.1.0"
pytest-cov = "3.0.0"
flake8 = "4.0.1"
isort = "5.10.1"
black = "^22.8.0"
newspaper3k = "0.2.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"


[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]
branch = true

[tool.flake8]
max-line-length = 119
